[gd_scene load_steps=13 format=2]

[ext_resource path="res://Player 1.tscn" type="PackedScene" id=1]
[ext_resource path="res://ganha.tscn" type="PackedScene" id=2]
[ext_resource path="res://wallpaperfreeway.png" type="Texture" id=3]
[ext_resource path="res://Player 2.tscn" type="PackedScene" id=4]
[ext_resource path="res://Main.gd" type="Script" id=5]
[ext_resource path="res://PressStart2P-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://sons/ganhou.wav" type="AudioStream" id=7]
[ext_resource path="res://sons/tema.wav" type="AudioStream" id=8]
[ext_resource path="res://sons/ponto.wav" type="AudioStream" id=9]
[ext_resource path="res://cora.png" type="Texture" id=10]
[ext_resource path="res://carros.tscn" type="PackedScene" id=11]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 6 )

[node name="Main" type="Node"]
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )
centered = false

[node name="ganha" parent="." instance=ExtResource( 2 )]
position = Vector2( 638.66, 64 )

[node name="Player 1" parent="." instance=ExtResource( 1 )]
position = Vector2( 320, 696 )

[node name="Player 2" parent="." instance=ExtResource( 4 )]
position = Vector2( 944, 696 )

[node name="horacarrorapido" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="horacarrolento" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="placar1" type="Label" parent="."]
margin_left = 300.0
margin_top = 10.0
margin_right = 320.0
margin_bottom = 30.0
custom_colors/font_color = Color( 1, 0.968627, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1

[node name="placar2" type="Label" parent="."]
margin_left = 920.0
margin_top = 10.0
margin_right = 944.0
margin_bottom = 30.0
custom_colors/font_color = Color( 0.984314, 1, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1

[node name="resultado" type="Label" parent="."]
margin_top = 204.0
margin_right = 1280.0
margin_bottom = 30.0
custom_colors/font_color = Color( 0.894118, 1, 0.0117647, 1 )
custom_fonts/font = SubResource( 1 )
align = 1

[node name="ponto" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="ganhou" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="tema" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -18.0

[node name="Button" type="Button" parent="."]
margin_left = 496.0
margin_top = 300.0
margin_right = 796.0
margin_bottom = 380.0
custom_colors/font_color_focus = Color( 0.870588, 1, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Reiniciar"

[node name="Timer" type="Timer" parent="."]
wait_time = 300.0
autostart = true

[node name="crono" type="Label" parent="."]
margin_top = 10.0
margin_right = 1280.0
margin_bottom = 30.0
custom_colors/font_color = Color( 0.956863, 0.839216, 0.0470588, 1 )
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1

[node name="Timer2" type="Timer" parent="."]
process_mode = 0
autostart = true

[node name="Cora" type="Sprite" parent="."]
position = Vector2( 330, 855 )
texture = ExtResource( 10 )
offset = Vector2( -305, -158 )

[node name="Cora2" type="Sprite" parent="."]
position = Vector2( 1502, 855 )
texture = ExtResource( 10 )
offset = Vector2( -305, -158 )

[node name="vida1" type="Label" parent="."]
margin_left = 50.0
margin_top = 680.0
margin_right = 80.0
margin_bottom = 710.0
custom_colors/font_color = Color( 1, 0.87451, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "10"
align = 1

[node name="vida2" type="Label" parent="."]
margin_left = 1215.0
margin_top = 680.0
margin_right = 1255.0
margin_bottom = 710.0
custom_colors/font_color = Color( 0.996078, 0.933333, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "10"
align = 1

[node name="carros" parent="." instance=ExtResource( 11 )]

[connection signal="body_entered" from="Player 1" to="carros" method="_on_Player_1_body_entered"]
[connection signal="hit" from="Player 1" to="." method="_on_Player_1_hit"]
[connection signal="pontua" from="Player 1" to="." method="_on_Player_1_pontua"]
[connection signal="hit2" from="Player 2" to="." method="_on_Player_2_hit2"]
[connection signal="pontua2" from="Player 2" to="." method="_on_Player_2_pontua2"]
[connection signal="timeout" from="horacarrorapido" to="." method="_on_horacarrorapido_timeout"]
[connection signal="timeout" from="horacarrolento" to="." method="_on_horacarrolento_timeout"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
